création de jouer_coup (pas finis)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "conversion_dimacs.h": "c"
+        "conversion_dimacs.h": "c",
+        "grille.h": "c"
     }
 }
